Fix Readability - Make text more readable by changing color of transparent - Format HTML

--- a/timer.css
+++ b/timer.css
@@ -2,7 +2,11 @@ body{
 	text-align: center;
 	background: #00ECB9;
   font-family: sans-serif;
-  font-weight: 100;
+}
+
+.container {
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .colorchange {
@@ -39,7 +43,7 @@ body{
 
 h1{
   color: white;
-  font-weight: 100;
+  font-weight: 500;
   font-size: 40px;
   margin: 40px 0px 20px;
 }
@@ -53,16 +57,15 @@ label {
 	font-family: sans-serif;
 	color: #fff;
 	display: inline-block;
-	font-weight: 100;
 	text-align: center;
 	font-size: 30px;
-  padding-bottom: 30px;
+  padding-bottom: 15px;
 }
 
 #clockdiv > form > div {
 	padding: 10px;
 	border-radius: 3px;
-	background: rgba(255,255,255, 0.3);
+	background: rgba(100, 100, 100, 0.2);
 	display: inline-block;
 }
 
@@ -71,7 +74,7 @@ label {
   color: white;
   font-size: 40px;
   border: none;
-  width: 45px;
+  width: 50px;
   border-radius: 5px;
   padding: 10px;
 	text-align: center;
@@ -82,12 +85,8 @@ label {
 	font-size: 16px;
 }
 
-#buttonDiv {
-  padding-bottom: 20px;
-}
-
 .btn {
-  background-color: rgba(255,255,255, 0.3);
+  background-color: rgba(100, 100, 100, 0.2);
   color: white;
   border: none;
   font-size: 16px;
@@ -95,9 +94,13 @@ label {
   padding: 10px;
 }
 
+#options {
+	padding-bottom: 15px;
+}
+
 #options > div {
   padding: 10px;
 	border-radius: 5px;
   display: inline-block;
-  background-color: rgba(255,255,255, 0.3);
+  background-color: rgba(100, 100, 100, 0.2);
 }
